# openfec

./: .gitignore  .version  CHANGELOG  CMakeLists.txt  README  bump_version.py
.github/workflows/: build-openfec.yml  build.yml  release.yml
applis/eperftool/: CMakeLists.txt  receiver.c  sender.c
applis/howto_examples/simple_client_server/: CMakeLists.txt  simple_client.c  simple_server.c
debian/: changelog  control  libopenfec-dev.install  libopenfec-tools.install  libopenfec.install  rules  watch
pc/: CMakeLists.txt  openfec.pc.in
rpm/: libopenfec-1.4.2.4.spec  libopenfec-1.4.2.7.spec  libopenfec-1.4.2.8.spec  openfec.spec
scripts/: bump_version.py  make_deb.sh  update_changelog.py
src/: CMakeLists.txt
src/lib_advanced/ldpc_from_file/: of_codec_profile.h
src/lib_common/: of_build_config.h.in  of_openfec_api.c  of_openfec_profile.h
src/lib_common/linear_binary_codes_utils/: of_symbol.c
src/lib_common/linear_binary_codes_utils/binary_matrix/: of_matrix_dense.c
src/lib_common/linear_binary_codes_utils/ml_decoding/: of_ml_decoding.c
src/lib_stable/2d_parity_matrix/: of_2d_parity_api.c  of_codec_profile.h
src/lib_stable/ldpc_staircase/: of_codec_profile.h  of_ldpc_staircase_api.c
src/lib_stable/reed-solomon_gf_2_8/: of_codec_profile.h  of_reed-solomon_gf_2_8.c  of_reed-solomon_gf_2_8_api.c
src/lib_stable/reed-solomon_gf_2_m/: of_codec_profile.h  of_reed-solomon_gf_2_m_api.c
src/lib_stable/reed-solomon_gf_2_m/galois_field_codes_utils/: algebra_2_4.c  algebra_2_8.c
tests/: CMakeLists.txt  callback_test.c
